fix: remove whitespace after footer

--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,12 @@
     @apply border-border;
   }
 
+  html,
+  body {
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
+  }
 
   body {
     @apply bg-background text-foreground overflow-x-hidden;
